--- a/app/assets/stylesheets/components/session/session_form.css
+++ b/app/assets/stylesheets/components/session/session_form.css
@@ -53,7 +53,7 @@
   font-weight: 500;
 }
 
-button {
+.session-form-container button {
   font-size: 15px;
   font-weight: 700;
   width: 400px;
@@ -67,4 +67,15 @@ button {
 button:hover{
   background-color: rgb(154, 112, 194);
   cursor: pointer;
+}
+
+.session-form > .errors-list {
+  color: red;
+  list-style: inside;
+  padding-bottom: 15px;
+  
+}
+
+.errors-list > li {
+  padding-bottom: 5px;
 }
