--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,6 @@
  *= require_self
  */
 
- @import "base/reset.css";
+@import "base/reset.scss";
  
- @import "components/*";
+@import "components/*";
