--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script type="text/javascript">
       window.tempIcon = "<%= image_url('temp_icon.png') %>";
+      window.gitHubLogo = "<%= image_url('GitHub-Mark-32px.png') %>";
+      window.linkedInLogo = "<%= image_url('LI-In-Bug.png') %>";
     </script>
   </head>
 
