--- a/app/assets/stylesheets/components/channel.scss
+++ b/app/assets/stylesheets/components/channel.scss
@@ -9,6 +9,16 @@
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   width: 100vw;
   height: 100vh;
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .example {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
 }
 
 .left-sidebar {
@@ -19,6 +29,7 @@
   background-color: rgb(54, 41, 54);
   color: white;
   border-right: 1px solid rgb(99, 99, 99);
+  overflow: auto;
 
   .display-name-container{
     display: flex;
