--- a/app/assets/stylesheets/components/channel.scss
+++ b/app/assets/stylesheets/components/channel.scss
@@ -146,6 +146,15 @@
       padding-right: 5px;
     }
   }
+  button{
+    width: 70px;
+    margin-left: 15px;
+    border: 1px solid #565656;
+    height: 30px;
+    background-color: #302735;
+    color: white;
+    border-radius: 5px;
+  }
 }
 
 .channel {
