--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
       window.tempIcon = "<%= image_url('temp_icon.png') %>";
       window.gitHubLogo = "<%= image_url('GitHub-Mark-32px.png') %>";
       window.linkedInLogo = "<%= image_url('LI-In-Bug.png') %>";
+      window.defaultAvatar = "<%= image_url('avatar.png') %>";
     </script>
   </head>
 
