--- a/app/assets/stylesheets/components/modal.scss
+++ b/app/assets/stylesheets/components/modal.scss
@@ -68,6 +68,7 @@
     background-color: rgb(59, 48, 59);
     border: 2px solid gray;
     border-radius: 3px;
+    color: white;
   }
 
   // input:focus-visible{
