--- a/app/assets/stylesheets/components/splash.scss
+++ b/app/assets/stylesheets/components/splash.scss
@@ -9,6 +9,8 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    padding-right: 150px;
+    padding-left: 150px;
     font-size: 15px;
     font-weight: 500;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
