--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,16 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <meta property="og:title" content="Tense" />
+    <meta property='og:image' content="<%= image_url('tense.png') %>"/>
+    <meta property="og:description"
+      content="A clone of the popular app Slack."
+    />
+    <meta property="og:url"
+      content="https://tense-app.herokuapp.com"
+    />
+    
+    <link rel="icon" href=<%= image_url('cat.ico') %>  type="image/icon type">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script type="text/javascript">
