--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       content="https://tense-app.herokuapp.com"
     />
     
-    <link rel="icon" href=<%= image_url('cat.ico') %>  type="image/icon type">
+    <link rel="icon" href=<%= image_url('cat-no-mouth.ico') %>  type="image/icon type">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script type="text/javascript">
