Add Delete Channels functionality

--- a/app/assets/stylesheets/components/channel.scss
+++ b/app/assets/stylesheets/components/channel.scss
@@ -316,6 +316,20 @@
 
       }
 
+      .delete-tab{
+        font-weight: 500;
+        display: flex;
+        justify-content: space-between;
+        padding: 9px;
+        text-decoration: none;
+        color: #ff0052;
+        align-items: center;
+        cursor: pointer;
+        div {
+          padding: 10px;
+        }
+      }
+
     }
 
   }
