--- a/app/assets/stylesheets/components/channel.scss
+++ b/app/assets/stylesheets/components/channel.scss
@@ -297,6 +297,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            cursor: pointer;
             span{
               font-size: 14px;
               font-weight: 500;
