--- a/app/assets/stylesheets/components/channel.scss
+++ b/app/assets/stylesheets/components/channel.scss
@@ -158,6 +158,7 @@
   background-color: rgb(48, 39, 53);
   padding: 5px;
   border-bottom: 1px solid rgb(99, 99, 99);
+  align-items: center;
   .logo {
     padding: 5px;
     display: flex;
@@ -180,6 +181,62 @@
   }
   button:hover{
     background-color: rgb(135, 82, 151);
+  }
+
+  .search{
+    position: relative;
+    width: 500px;
+    font-size: 15px;
+    input{
+      width: 500px;
+      z-index: 11;
+      position: relative;
+      background-color: #302735;
+      padding: 5px;
+      border: 1px solid gray;
+      border-radius: 4px;
+    }
+
+    .search-background{
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      background: rgba(255, 255, 255, 0.0);
+      z-index: 10;
+    }
+
+    .search{
+      display: none;
+      max-height: 300px;
+      width: 510px;
+      background: #543954;
+      position: absolute;
+      top: 25px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      z-index: 11;
+      border: 1px solid gray;
+      border-radius: 3px;
+      overflow: auto;
+      li{
+        padding: 5px;
+        padding-right: 10px;
+        padding-left: 10px;
+      }
+      li:hover{
+        background-color: #867086;
+      }
+      img{
+        height: 20px;
+        border-radius: 3px;
+        margin-right: 9px;
+      }
+    }
+    .search.active{
+      display: block;
+    }
   }
 }
 
@@ -269,7 +326,6 @@
     }
 
     .details-list{
-
       a{
         font-weight: 500;
         display: flex;
@@ -286,8 +342,10 @@
         border-bottom: 1px solid gray;
 
         > .members-list {
+          height: calc(100vh - 210px);
           display: flex;
           flex-direction: column;
+          overflow: auto;
 
           > li {
             font-size: 15px;
