--- a/app/assets/stylesheets/components/channel.scss
+++ b/app/assets/stylesheets/components/channel.scss
@@ -187,6 +187,7 @@
     position: relative;
     width: 500px;
     font-size: 15px;
+    color: #e2e2e2;
     input{
       width: 500px;
       z-index: 11;
@@ -195,6 +196,7 @@
       padding: 5px;
       border: 1px solid gray;
       border-radius: 4px;
+      color: #e2e2e2;
     }
 
     .search-background{
@@ -224,6 +226,8 @@
         padding: 5px;
         padding-right: 10px;
         padding-left: 10px;
+        display: flex;
+        align-items: center;
       }
       li:hover{
         background-color: #867086;
@@ -232,6 +236,10 @@
         height: 20px;
         border-radius: 3px;
         margin-right: 9px;
+      }
+      svg{
+        font-size: 20px;
+        margin-right: 12px;
       }
     }
     .search.active{
@@ -342,7 +350,7 @@
         border-bottom: 1px solid gray;
 
         > .members-list {
-          height: calc(100vh - 210px);
+          max-height: calc(100vh - 210px);
           display: flex;
           flex-direction: column;
           overflow: auto;
