--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     />
     
     <link rel="icon" href=<%= image_url('cat-no-mouth.ico') %>  type="image/icon type">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.12.0/devicon.min.css">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script type="text/javascript">
@@ -22,6 +23,10 @@
       window.gitHubLogo = "<%= image_url('GitHub-Mark-32px.png') %>";
       window.linkedInLogo = "<%= image_url('LI-In-Bug.png') %>";
       window.defaultAvatar = "<%= image_url('avatar.png') %>";
+      window.screenshot = "<%= image_url('tense.png') %>";
+      window.postcard = "<%= image_url('postcard.png') %>";
+      window.treegen = "<%= image_url('treegen.png') %>";
+      window.angelListIcon = "<%= image_url('AngelList_White_Victory_Hand.png') %>";
     </script>
   </head>
 
