--- a/app/assets/stylesheets/components/splash.scss
+++ b/app/assets/stylesheets/components/splash.scss
@@ -6,11 +6,11 @@
 
   .splash-header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    padding: 20px;
-    padding-right: 150px;
-    padding-left: 150px;
+    // padding: 20px;
+    // padding-right: 150px;
+    // padding-left: 150px;
     font-size: 15px;
     font-weight: 500;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -71,8 +71,10 @@
     justify-content: center;
     background-color: rgb(139, 89, 146);
     align-items: center;
-    margin: 150px;
-
+    height: 700px;
+    /* margin: 150px; */
+    margin-right: 100px;
+    margin-left: 100px;
     > h1 {
       font-size: 50px;
       font-weight: 700;
@@ -104,27 +106,74 @@
 
   .splash-footer{
     margin-top: auto;
-    background-color: rgb(139, 89, 146);
+    background-color: #211223;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    justify-content: space-around;
     text-align: center;
-
+    color: white;
+    padding: 30px;
+    .left{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
     img {
       height: 32px;
       padding: 15px;
+      color: white;
     }
-
-    .logo {
+    .logo{
+      display: flex;
+      align-items: center;
       font-size: 30px;
       font-weight: 700;
       color: white;
       text-decoration: none;
       font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      > img {
-        height: 50px;
+      h2{
+        padding-right: 15px;
       }
     }
+
+    .right{
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      justify-content: space-around;
+      h2{
+        font-size: 25px;
+        font-weight: 500px;
+        padding: 5px;
+      }
+
+      ul{
+        color: white;
+        font-size: 17px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        li{
+          padding: 5px;
+        }
+        a{
+          color: white;
+          text-decoration: none;
+        }
+      }
+    }
+
+    // .cathead {
+    //   font-size: 30px;
+    //   font-weight: 700;
+    //   color: white;
+    //   text-decoration: none;
+    //   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    //   margin-right: 0px;
+    //   > img {
+    //     height: 50px;
+    //   }
+    // }
 
     p {
       font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -134,6 +183,141 @@
     }
 
 
+  }
+  .body-2{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-right: 0px;
+    margin-left: 0px;
+    padding-right: 100px;
+    padding-left: 100px;
+    background-color: #814788;
+    .text{
+      display: flex;
+      flex-direction: column;
+      width: 500px;
+      h1{
+        font-size: 40px;
+        font-weight: 700;
+        color: white;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align: center;
+        line-height: 38px;
+        padding: 10px;
+      }
+      p{
+        font-size: 18px;
+        font-weight: 500;
+        color: white;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align: center;
+        /* line-height: 60px; */
+        padding: 5px;
+      }
+    }
+    img{
+      height: 500px;
+      padding: 5px;
+    }
+  }
+
+  .body-3{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    // margin-right: 0px;
+    // margin-left: 0px;
+    .text{
+      display: flex;
+      flex-direction: column;
+      width: 500px;
+      h1{
+        font-size: 40px;
+        font-weight: 700;
+        color: white;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align: center;
+        line-height: 38px;
+        padding: 10px;
+      }
+      p{
+        font-size: 18px;
+        font-weight: 500;
+        color: white;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align: center;
+        /* line-height: 60px; */
+        padding: 5px;
+      }
+    }
+    ul{
+      display: flex;
+      width: 290px;
+      flex-direction: row;
+      flex-wrap: wrap;
+      li{
+        padding: 15px;
+        color: #dbc338;
+        font-size: 65px;
+      }
+    }
+  }
+
+  .body-4{
+    display: flex;
+    flex-direction: column;
+    margin-right: 0px;
+    margin-left: 0px;
+    padding-right: 100px;
+    padding-left: 100px;
+    background-color: #814788;
+    .text{
+      display: flex;
+      flex-direction: row;
+      width: 500px;
+      margin-bottom: 50px;
+      h1{
+        font-size: 40px;
+        font-weight: 700;
+        color: white;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align: center;
+        line-height: 38px;
+        padding: 10px;
+      }
+      p{
+        font-size: 18px;
+        font-weight: 500;
+        color: white;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align: center;
+        /* line-height: 60px; */
+        padding: 5px;
+      }
+    }
+    .project-links{
+      display: flex;
+      justify-content: space-between;
+      width: 954px;
+      padding-bottom: 50px;
+      a{
+        text-decoration: none;
+      }
+      h1{
+        font-size: 20px;
+        font-weight: 700;
+        color: white;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align: center;
+        line-height: 38px;
+        padding: 10px;
+        
+      }
+      img{
+        height: 250px;
+      }
+    }
   }
 
 }
