Add editing to DMs

--- a/app/assets/stylesheets/components/channel.scss
+++ b/app/assets/stylesheets/components/channel.scss
@@ -336,7 +336,30 @@
         background-color: rgb(122, 116, 116);
       }
     }
-
+    
+    @media (min-width: 1300px) and (max-width: 1520px){
+      .message-edit-form{
+        input{
+          width: calc(60vw);
+        }
+      }
+    }
+    
+    @media (min-width: 1520px) and (max-width: 1750px){
+      .message-edit-form{
+        input{
+          width: calc(63vw);
+        }
+      }
+    }
+    
+    @media (min-width: 1750px){
+      .message-edit-form{
+        input{
+          width: calc(65vw);
+        }
+      }
+    }
   }
   
   .right-side-bar{
@@ -465,6 +488,35 @@
 
   .wide{
     grid-column: 1 / span 2;
+    .message-edit-form{
+      input{
+        width: calc(65vw);
+      }
+    }
+
+    @media (min-width: 1300px) and (max-width: 1520px){
+      .message-edit-form{
+        input{
+          width: calc(75vw);
+        }
+      }
+    }
+    @media (min-width: 1520px) and (max-width: 1750px){
+
+      .message-edit-form{
+        input{
+          width: calc(78vw);
+        }
+      }
+    }
+    @media (min-width: 1750px){
+      .message-edit-form{
+        input{
+          width: calc(80vw);
+        }
+      }
+    }
+
   }
   
 
